--- a/src/config.json
+++ b/src/config.json
@@ -3,7 +3,7 @@
     "exchange": {
       "address": "0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9"
     },
-    "Token": {
+    "DApp": {
       "address": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
     },
     "mETH": {
@@ -11,6 +11,10 @@
     },
     "mDAI": {
       "address": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
-    }
+    },
+    "explorerURL": "#"
+  },
+  "42": {
+    "explorerURL": "https://kovan.etherscan.io/"
   }
 }
